--- a/frontend/articles.html
+++ b/frontend/articles.html
@@ -39,120 +39,19 @@
             <h2>All Weekly Ultra Recaps</h2>
             <div class="article-grid">
 
-                <!-- BEGIN ARTICLE CARDS -->
+                <!-- BEGIN ARTICLE CARDS (NEWEST TO OLDEST) -->
                 <div class="article-card">
-                    <img src="images/ultra_jan4weekend.jpg" alt="Jan 4–5" />
-                    <h3>Ultra Recap: Jan 4–5</h3>
-                    <p>Three races kicked off the year — from Florida to West Virginia trails.</p>
-                    <a href="articles/ultra_weekend_jan4.html">Read More</a>
+                    <img src="images/ultra_may31weekend.jpg" alt="Trail runners in June sun" />
+                    <h3>Ultra Recap: May 31–June 1</h3>
+                    <p>PRs, heat, disco lights — the summer ultra grind begins.</p>
+                    <a href="articles/ultra_weekend_may31.html">Read More</a>
                 </div>
+
                 <div class="article-card">
-                    <img src="images/ultra_jan11weekend.jpg" alt="Jan 11–12" />
-                    <h3>Ultra Recap: Jan 11–12</h3>
-                    <p>No Hands Trail, Miami, and Taiwan brought adventure in Week 2.</p>
-                    <a href="articles/ultra_weekend_jan11.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_jan18weekend.jpg" alt="Jan 18–19" />
-                    <h3>Ultra Recap: Jan 18–19</h3>
-                    <p>Course records, snowfields, and epic performances this weekend.</p>
-                    <a href="articles/ultra_weekend_jan18.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_jan25weekend.jpg" alt="Jan 25–26" />
-                    <h3>Ultra Recap: Jan 25–26</h3>
-                    <p>From Alabama to Australia — muddy trails and big mileage.</p>
-                    <a href="articles/ultra_weekend_jan25.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_feb1weekend.jpg" alt="Feb 1–2" />
-                    <h3>Ultra Recap: Feb 1–2</h3>
-                    <p>Ice, snow, and survival at Arrowhead 135 and the Frozen Yeti.</p>
-                    <a href="articles/ultra_weekend_feb1.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_feb8weekend.jpg" alt="Feb 8–9" />
-                    <h3>Ultra Recap: Feb 8–9</h3>
-                    <p>PRs on desert trails and snowy ridgelines marked this weekend.</p>
-                    <a href="articles/ultra_weekend_feb8.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_feb15weekend.jpg" alt="Feb 15–16" />
-                    <h3>Ultra Recap: Feb 15–16</h3>
-                    <p>Romantic races and solo missions alike on Valentine’s weekend.</p>
-                    <a href="articles/ultra_weekend_feb15.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_feb22weekend.jpg" alt="Feb 22–23" />
-                    <h3>Ultra Recap: Feb 22–23</h3>
-                    <p>River crossings, loop races, and final February finishes.</p>
-                    <a href="articles/ultra_weekend_feb22.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_mar1weekend.jpg" alt="Mar 1–2" />
-                    <h3>Ultra Recap: Mar 1–2</h3>
-                    <p>March began with fast feet and fresh legs across the U.S.</p>
-                    <a href="articles/ultra_weekend_mar1.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_mar8weekend.jpg" alt="Mar 8–9" />
-                    <h3>Ultra Recap: Mar 8–9</h3>
-                    <p>Woodsy challenges and record chases on diverse terrain.</p>
-                    <a href="articles/ultra_weekend_mar8.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_mar15weekend.jpg" alt="Mar 15–16" />
-                    <h3>Ultra Recap: Mar 15–16</h3>
-                    <p>Altitude gains and late-winter grit defined this week.</p>
-                    <a href="articles/ultra_weekend_mar15.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_mar22weekend.jpg" alt="Mar 22–23" />
-                    <h3>Ultra Recap: Mar 22–23</h3>
-                    <p>Spring begins with scenic mountain trails and close finishes.</p>
-                    <a href="articles/ultra_weekend_mar22.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_mar29weekend.jpg" alt="Mar 29–30" />
-                    <h3>Ultra Recap: Mar 29–30</h3>
-                    <p>Powerful women’s finishes and final March milestones.</p>
-                    <a href="articles/ultra_weekend_mar29.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_apr5weekend.jpg" alt="Apr 5–6" />
-                    <h3>Ultra Recap: Apr 5–6</h3>
-                    <p>Snow-covered climbs and icy course records out west.</p>
-                    <a href="articles/ultra_weekend_apr5.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_apr12weekend.jpg" alt="Apr 12–13" />
-                    <h3>Ultra Recap: Apr 12–13</h3>
-                    <p>Spring blooms and fast finishes from coast to coast.</p>
-                    <a href="articles/ultra_weekend_apr12.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_apr19weekend.jpg" alt="Apr 19–20" />
-                    <h3>Ultra Recap: Apr 19–20</h3>
-                    <p>High altitude efforts and European races steal the show.</p>
-                    <a href="articles/ultra_weekend_apr19.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_apr26weekend.jpg" alt="Apr 26–27" />
-                    <h3>Ultra Recap: Apr 26–27</h3>
-                    <p>Vertical trail races and wild weather hit this weekend.</p>
-                    <a href="articles/ultra_weekend_apr26.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_may3weekend.jpg" alt="May 3–4" />
-                    <h3>Ultra Recap: May 3–4</h3>
-                    <p>Speed, heat, and unexpected newcomers led May’s debut.</p>
-                    <a href="articles/ultra_weekend_may3.html">Read More</a>
-                </div>
-                <div class="article-card">
-                    <img src="images/ultra_may10weekend.jpg" alt="May 10–11" />
-                    <h3>Ultra Recap: May 10–11</h3>
-                    <p>Scenic roads, relentless climbs, and sun-drenched finishes.</p>
-                    <a href="articles/ultra_weekend_may10.html">Read More</a>
+                    <img src="images/ultra_may24weekend.jpg" alt="May 24–26" />
+                    <h3>Ultra Recap: May 24–26</h3>
+                    <p>Memorial Day weekend delivered PRs and course records.</p>
+                    <a href="articles/ultra_weekend_may24.html">Read More</a>
                 </div>
                 <div class="article-card">
                     <img src="images/ultra_may17weekend.jpg" alt="May 17–18" />
@@ -161,10 +60,118 @@
                     <a href="articles/ultra_weekend_may17.html">Read More</a>
                 </div>
                 <div class="article-card">
-                    <img src="images/ultra_may24weekend.jpg" alt="May 24–26" />
-                    <h3>Ultra Recap: May 24–26</h3>
-                    <p>Memorial Day weekend delivered PRs and course records.</p>
-                    <a href="articles/ultra_weekend_may24.html">Read More</a>
+                    <img src="images/ultra_may10weekend.jpg" alt="May 10–11" />
+                    <h3>Ultra Recap: May 10–11</h3>
+                    <p>Scenic roads, relentless climbs, and sun-drenched finishes.</p>
+                    <a href="articles/ultra_weekend_may10.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_may3weekend.jpg" alt="May 3–4" />
+                    <h3>Ultra Recap: May 3–4</h3>
+                    <p>Speed, heat, and unexpected newcomers led May’s debut.</p>
+                    <a href="articles/ultra_weekend_may3.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_apr26weekend.jpg" alt="Apr 26–27" />
+                    <h3>Ultra Recap: Apr 26–27</h3>
+                    <p>Vertical trail races and wild weather hit this weekend.</p>
+                    <a href="articles/ultra_weekend_apr26.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_apr19weekend.jpg" alt="Apr 19–20" />
+                    <h3>Ultra Recap: Apr 19–20</h3>
+                    <p>High altitude efforts and European races steal the show.</p>
+                    <a href="articles/ultra_weekend_apr19.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_apr12weekend.jpg" alt="Apr 12–13" />
+                    <h3>Ultra Recap: Apr 12–13</h3>
+                    <p>Spring blooms and fast finishes from coast to coast.</p>
+                    <a href="articles/ultra_weekend_apr12.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_apr5weekend.jpg" alt="Apr 5–6" />
+                    <h3>Ultra Recap: Apr 5–6</h3>
+                    <p>Snow-covered climbs and icy course records out west.</p>
+                    <a href="articles/ultra_weekend_apr5.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_mar29weekend.jpg" alt="Mar 29–30" />
+                    <h3>Ultra Recap: Mar 29–30</h3>
+                    <p>Powerful women’s finishes and final March milestones.</p>
+                    <a href="articles/ultra_weekend_mar29.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_mar22weekend.jpg" alt="Mar 22–23" />
+                    <h3>Ultra Recap: Mar 22–23</h3>
+                    <p>Spring begins with scenic mountain trails and close finishes.</p>
+                    <a href="articles/ultra_weekend_mar22.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_mar15weekend.jpg" alt="Mar 15–16" />
+                    <h3>Ultra Recap: Mar 15–16</h3>
+                    <p>Altitude gains and late-winter grit defined this week.</p>
+                    <a href="articles/ultra_weekend_mar15.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_mar8weekend.jpg" alt="Mar 8–9" />
+                    <h3>Ultra Recap: Mar 8–9</h3>
+                    <p>Woodsy challenges and record chases on diverse terrain.</p>
+                    <a href="articles/ultra_weekend_mar8.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_mar1weekend.jpg" alt="Mar 1–2" />
+                    <h3>Ultra Recap: Mar 1–2</h3>
+                    <p>March began with fast feet and fresh legs across the U.S.</p>
+                    <a href="articles/ultra_weekend_mar1.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_feb22weekend.jpg" alt="Feb 22–23" />
+                    <h3>Ultra Recap: Feb 22–23</h3>
+                    <p>River crossings, loop races, and final February finishes.</p>
+                    <a href="articles/ultra_weekend_feb22.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_feb15weekend.jpg" alt="Feb 15–16" />
+                    <h3>Ultra Recap: Feb 15–16</h3>
+                    <p>Romantic races and solo missions alike on Valentine’s weekend.</p>
+                    <a href="articles/ultra_weekend_feb15.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_feb8weekend.jpg" alt="Feb 8–9" />
+                    <h3>Ultra Recap: Feb 8–9</h3>
+                    <p>PRs on desert trails and snowy ridgelines marked this weekend.</p>
+                    <a href="articles/ultra_weekend_feb8.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_feb1weekend.jpg" alt="Feb 1–2" />
+                    <h3>Ultra Recap: Feb 1–2</h3>
+                    <p>Ice, snow, and survival at Arrowhead 135 and the Frozen Yeti.</p>
+                    <a href="articles/ultra_weekend_feb1.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_jan25weekend.jpg" alt="Jan 25–26" />
+                    <h3>Ultra Recap: Jan 25–26</h3>
+                    <p>From Alabama to Australia — muddy trails and big mileage.</p>
+                    <a href="articles/ultra_weekend_jan25.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_jan18weekend.jpg" alt="Jan 18–19" />
+                    <h3>Ultra Recap: Jan 18–19</h3>
+                    <p>Course records, snowfields, and epic performances this weekend.</p>
+                    <a href="articles/ultra_weekend_jan18.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_jan11weekend.jpg" alt="Jan 11–12" />
+                    <h3>Ultra Recap: Jan 11–12</h3>
+                    <p>No Hands Trail, Miami, and Taiwan brought adventure in Week 2.</p>
+                    <a href="articles/ultra_weekend_jan11.html">Read More</a>
+                </div>
+                <div class="article-card">
+                    <img src="images/ultra_jan4weekend.jpg" alt="Jan 4–5" />
+                    <h3>Ultra Recap: Jan 4–5</h3>
+                    <p>Three races kicked off the year — from Florida to West Virginia trails.</p>
+                    <a href="articles/ultra_weekend_jan4.html">Read More</a>
                 </div>
                 <!-- END ARTICLE CARDS -->
 
