Add June 7–8 ultra weekend recap article and update articles.html

--- a/frontend/articles.html
+++ b/frontend/articles.html
@@ -41,6 +41,13 @@
 
                 <!-- BEGIN ARTICLE CARDS (NEWEST TO OLDEST) -->
                 <div class="article-card">
+                    <img src="images/ultra_june7weekend.jpg" alt="June 7–8" />
+                    <h3>Ultra Recap: June 7–8</h3>
+                    <p>Mountain climbs in California and riverside roads in Japan made this a weekend to remember.</p>
+                    <a href="articles/ultra_weekend_june7.html">Read More</a>
+                </div>
+
+                <div class="article-card">
                     <img src="images/ultra_may31weekend.jpg" alt="Trail runners in June sun" />
                     <h3>Ultra Recap: May 31–June 1</h3>
                     <p>PRs, heat, disco lights — the summer ultra grind begins.</p>
