Add June 14–15 recap article and article card

--- a/frontend/articles.html
+++ b/frontend/articles.html
@@ -41,6 +41,13 @@
 
                 <!-- BEGIN ARTICLE CARDS (NEWEST TO OLDEST) -->
                 <div class="article-card">
+                    <img src="images/ultra_jun14weekend.jpg" alt="June 14–15" />
+                    <h3>Ultra Recap: June 14–15</h3>
+                    <p>From alpine climbs in Andorra to Sweden’s coastal trails — this weekend brought global grit.</p>
+                    <a href="articles/ultra_weekend_jun14.html">Read More</a>
+                </div>
+
+                <div class="article-card">
                     <img src="images/ultra_jun7weekend.jpg" alt="June 7–8" />
                     <h3>Ultra Recap: June 7–8</h3>
                     <p>Mountain climbs in California and riverside roads in Japan made this a weekend to remember.</p>
