--- a/frontend/login.html
+++ b/frontend/login.html
@@ -76,68 +76,67 @@
     </footer>
 
     <script>
-        window.addEventListener("DOMContentLoaded", () => {
+        console.log("✅ Login script loaded");
+        document.addEventListener("DOMContentLoaded", () => {
             const form = document.getElementById("login-form");
+            const loginMessage = document.getElementById("login-message");
+
             if (!form) {
-                console.error("⚠️ login-form not found");
+                console.error("❌ login-form not found");
                 return;
             }
-
-            const loginMessage = document.getElementById('login-message');
 
             form.addEventListener("submit", async (e) => {
                 e.preventDefault();
 
-                const email = document.getElementById('email').value.trim();
-                const password = document.getElementById('password').value.trim();
-
-                loginMessage.style.display = 'none';
-                loginMessage.textContent = '';
+                const email = document.getElementById("email").value.trim();
+                const password = document.getElementById("password").value.trim();
 
                 if (!email || !password) {
-                    loginMessage.textContent = 'Please fill in both fields.';
-                    loginMessage.style.display = 'block';
+                    loginMessage.textContent = "Please enter both email and password.";
+                    loginMessage.style.display = "block";
                     return;
                 }
 
                 try {
-                    const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/login', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
+                    const response = await fetch("https://ultramarathon-finder-backend.onrender.com/api/auth/login", {
+                        method: "POST",
+                        headers: { "Content-Type": "application/json" },
                         body: JSON.stringify({ email, password })
                     });
 
                     const data = await response.json();
 
                     if (response.ok && data.token) {
-                        localStorage.setItem('token', data.token);
-                        localStorage.setItem('username', data.user.username);
-                        localStorage.setItem('profilePicture', data.user.profilePicture || '');
-                        localStorage.setItem('lastActive', Date.now().toString());
-
-                        window.location.href = 'index.html';
+                        localStorage.setItem("token", data.token);
+                        localStorage.setItem("username", data.user.username);
+                        localStorage.setItem("profilePicture", data.user.profilePicture || "");
+                        localStorage.setItem("lastActive", Date.now().toString());
+                        window.location.href = "index.html";
                     } else {
-                        loginMessage.textContent = data.message || 'Incorrect email or password.';
-                        loginMessage.style.display = 'block';
+                        loginMessage.textContent = data.message || "Invalid login.";
+                        loginMessage.style.display = "block";
                     }
                 } catch (err) {
                     console.error("⚠️ Login fetch error:", err);
-                    loginMessage.textContent = 'Could not connect to server.';
-                    loginMessage.style.display = 'block';
+                    loginMessage.textContent = "Login failed due to server error.";
+                    loginMessage.style.display = "block";
                 }
             });
 
             // Password toggle
-            document.querySelectorAll('.toggle-password').forEach(icon => {
-                icon.addEventListener('click', () => {
+            document.querySelectorAll(".toggle-password").forEach(icon => {
+                icon.addEventListener("click", () => {
                     const input = icon.previousElementSibling;
-                    const isVisible = input.type === 'text';
-                    input.type = isVisible ? 'password' : 'text';
-                    icon.textContent = isVisible ? 'visibility' : 'visibility_off';
+                    const isVisible = input.type === "text";
+                    input.type = isVisible ? "password" : "text";
+                    icon.textContent = isVisible ? "visibility" : "visibility_off";
                 });
             });
         });
     </script>
+
+    <script src="forum/inject_account_dropdown.js"></script>
 </body>
 
 </html>
