--- a/frontend/login.html
+++ b/frontend/login.html
@@ -88,6 +88,7 @@
 
             form.addEventListener("submit", async (e) => {
                 e.preventDefault();
+                console.log("🔁 Login form submitted");  
 
                 const email = document.getElementById("email").value.trim();
                 const password = document.getElementById("password").value.trim();
