--- a/frontend/login.html
+++ b/frontend/login.html
@@ -88,16 +88,21 @@
 
             form.addEventListener("submit", async (e) => {
                 e.preventDefault();
-                console.log("🔁 Login form submitted");  
+                console.log("🔁 Login form submitted");
 
                 const email = document.getElementById("email").value.trim();
                 const password = document.getElementById("password").value.trim();
+                const loginButton = form.querySelector("button[type='submit']");
 
                 if (!email || !password) {
                     loginMessage.textContent = "Please enter both email and password.";
                     loginMessage.style.display = "block";
                     return;
                 }
+
+                // Show loading state
+                loginButton.disabled = true;
+                loginButton.textContent = "Logging in...";
 
                 try {
                     const response = await fetch("https://ultramarathon-finder-backend.onrender.com/api/auth/login", {
@@ -117,11 +122,15 @@
                     } else {
                         loginMessage.textContent = data.message || "Invalid login.";
                         loginMessage.style.display = "block";
+                        loginButton.disabled = false;
+                        loginButton.textContent = "Login";
                     }
                 } catch (err) {
                     console.error("⚠️ Login fetch error:", err);
                     loginMessage.textContent = "Login failed due to server error.";
                     loginMessage.style.display = "block";
+                    loginButton.disabled = false;
+                    loginButton.textContent = "Login";
                 }
             });
 
