Update training log display for Strava photos and title truncation

--- a/frontend/training_log.html
+++ b/frontend/training_log.html
@@ -156,10 +156,19 @@
             font-size: 0.95rem;
             line-height: 1.4;
         }
+
+        .activity-title {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 90%;
+            display: block;
+        }
     </style>
 
     <script src="index_script.js"></script>
     <script src="training_log_script.js"></script>
+    <script src="forum/inject_account_dropdown.js"></script>
 </body>
 
 </html>
