--- a/frontend/training_log.html
+++ b/frontend/training_log.html
@@ -164,6 +164,24 @@
             max-width: 90%;
             display: block;
         }
+
+        .media-carousel {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1rem;
+            margin-top: 1rem;
+        }
+
+        .carousel-photo {
+            max-width: 300px;
+            border-radius: 8px;
+        }
+
+        .carousel-video {
+            width: 100%;
+            max-width: 500px;
+            border-radius: 8px;
+        }
     </style>
 
     <script src="index_script.js"></script>
