Add loading indicator and fix duplicate photo logic in training log

--- a/frontend/training_log.html
+++ b/frontend/training_log.html
@@ -40,6 +40,10 @@
             <button id="refresh-strava" class="button" style="display:none;">Refresh Activities</button>
         </div>
 
+        <div id="loading-indicator" style="display: none; margin-top: 10px; text-align: center; color: #fc4c02;">
+            🔄 Refreshing activities...
+        </div>
+
         <p class="strava-credit">Data provided by <a href="https://www.strava.com" target="_blank">Strava</a></p>
 
         <div id="weekly-summary" class="summary-card" style="display: none;"></div>
