Add Strava disconnect functionality

--- a/frontend/training_log.html
+++ b/frontend/training_log.html
@@ -46,6 +46,7 @@
         <div class="button-bar">
             <a href="#" id="connect-strava" class="button">Connect with Strava</a>
             <button id="refresh-strava" class="button" style="display:none;">Refresh Activities</button>
+            <button id="disconnect-strava" class="button" style="display:none; background-color: #999;">Disconnect Strava</button>
         </div>
 
         <div id="loading-indicator" style="display: none; margin-top: 10px; text-align: center; color: #fc4c02;">
