Show Strava profile picture and add disconnect button

--- a/frontend/training_log.html
+++ b/frontend/training_log.html
@@ -36,7 +36,7 @@
 
         <!-- 👤 Strava Profile Header Section -->
         <section id="training-header" class="training-header">
-            <img id="strava-profile-pic" class="profile-photo" src="default_profile.png" alt="Strava profile picture" />
+            <img id="strava-profile-pic" class="profile-photo" src="default-profile.png" alt="Strava profile picture" />
             <div class="profile-text">
                 <h2 id="strava-name">Your Name</h2>
                 <p id="strava-summary">This week's training summary goes here...</p>
