Fix: update Strava token logic and /account data if needed

--- a/frontend/training_log.html
+++ b/frontend/training_log.html
@@ -32,12 +32,7 @@
         </div>
     </header>
 
-    <div id="ultra-map-button" class="ultra-map-link" style="display: none;">
-        <a href="ultra_map.html" class="map-button">📍 View My Ultra Map</a>
-    </div>
-
     <main class="training-container" style="padding-top: 140px;">
-
         <!-- 👤 Strava Profile Header Section -->
         <section id="training-header" class="training-header">
             <img id="strava-profile-pic" class="profile-photo" src="default-profile.png" alt="Strava profile picture" />
@@ -52,6 +47,11 @@
             <button id="refresh-strava" class="button" style="display:none;">Refresh Activities</button>
             <button id="disconnect-strava" class="button" style="display:none; background-color: #999;">Disconnect
                 Strava</button>
+        </div>
+
+        <!-- ✅ Ultra Map button moved here -->
+        <div id="ultra-map-button" class="ultra-map-link" style="display: none; text-align: center; margin-top: 12px;">
+            <a href="ultra_map.html" class="map-button">📍 View My Ultra Map</a>
         </div>
 
         <div id="loading-indicator" style="display: none; margin-top: 10px; text-align: center; color: #fc4c02;">
@@ -73,17 +73,17 @@
     <script src="forum/inject_account_dropdown.js"></script>
 
     <script>
+        // Show Ultra Map button only if user is logged in + connected to Strava
         async function checkStravaConnection() {
             try {
-                const res = await fetch('https://ultramarathon-finder-backend.onrender.com/api/account', {
+                const res = await fetch('/api/account', {
                     headers: {
                         Authorization: 'Bearer ' + localStorage.getItem('token'),
                     },
-                    credentials: 'include',
                 });
 
                 const data = await res.json();
-                if (data.user && data.user.stravaAccessToken) {
+                if (res.ok && data.user && data.user.stravaAccessToken) {
                     document.getElementById('ultra-map-button').style.display = 'block';
                 }
             } catch (err) {
@@ -93,7 +93,6 @@
 
         checkStravaConnection();
     </script>
-
 </body>
 
 </html>
