Fix header layout for Ultra Map

--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="ultra_favicon.ico" type="image/x-icon" />
 </head>
 
-<body class="forum-page">
+<body class="account-layout">
     <header class="sticky-header dual-row-header">
         <div class="header-top-row">
             <div class="mobile-header-container">
