--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="ultra_favicon.ico" type="image/x-icon" />
 </head>
 
-<body class="account-layout">
+<body class="forum-page">
     <header class="sticky-header dual-row-header">
         <div class="header-top-row">
             <div class="mobile-header-container">
@@ -24,6 +24,7 @@
                 <button class="menu-toggle">☰</button>
             </div>
             <div id="account-tab" class="auth-tab mobile-account-tab"></div>
+            <div class="account-dropdown" id="account-dropdown" style="display: none;"></div>
         </div>
 
         <div class="header-bottom-row">
@@ -39,7 +40,6 @@
     </header>
 
     <main style="padding-top: 140px;">
-        <!-- 🧭 Hero Header Section -->
         <section class="ultra-map-hero">
             <div class="hero-content">
                 <h1>📍 My Ultra Map</h1>
@@ -66,7 +66,6 @@
         </form>
     </div>
 
-    <!-- Footer -->
     <footer class="site-footer">
         <div class="footer-links">
             <a href="contact.html">Contact Us</a> |
