--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -39,6 +39,7 @@
     </header>
 
     <main style="padding-top: 140px;">
+        <!-- 🧭 Hero Header Section -->
         <section class="ultra-map-hero">
             <div class="hero-content">
                 <h1>📍 My Ultra Map</h1>
@@ -65,6 +66,7 @@
         </form>
     </div>
 
+    <!-- Footer -->
     <footer class="site-footer">
         <div class="footer-links">
             <a href="contact.html">Contact Us</a> |
