--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -51,6 +51,9 @@
                 <p><strong>Longest Run:</strong> <span id="longest-run">0 mi</span></p>
                 <p><strong>Unique Locations:</strong> <span id="unique-locations">0</span></p>
             </div>
+            
+            <!-- 🔮 Alan AI Suggestion Button -->
+            <button onclick="askAlanBasedOnMap()" class="orange-btn">Ask Alan for Race Suggestions</button>
         </section>
 
         <div id="ultra-map" style="height: 500px;"></div>
