--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
     <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
     <link rel="icon" href="ultra_favicon.ico" type="image/x-icon" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body class="forum-page">
@@ -51,12 +52,19 @@
                 <p><strong>Longest Run:</strong> <span id="longest-run">0 mi</span></p>
                 <p><strong>Unique Locations:</strong> <span id="unique-locations">0</span></p>
             </div>
-            
+
             <!-- 🔮 Alan AI Suggestion Button -->
             <button onclick="askAlanBasedOnMap()" class="orange-btn">Ask Alan for Race Suggestions</button>
         </section>
 
+        <!-- 🗺️ Ultra Map Display -->
         <div id="ultra-map" style="height: 500px;"></div>
+
+        <!-- 🕰️ Ultra Completion Timeline -->
+        <section id="ultra-timeline-section" style="margin: 40px 20px;">
+            <h2 class="chart-title">📈 Ultra Completion Timeline</h2>
+            <canvas id="ultraTimelineChart" width="100%" height="60"></canvas>
+        </section>
     </main>
 
     <!-- Alan Chat Widget -->
@@ -86,7 +94,6 @@
     <script src="alanai_chatbot/alan.js"></script>
     <script src="forum/inject_account_dropdown.js"></script>
     <script src="ultra_map_script.js"></script>
-
 </body>
 
 </html>
