--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
     <link rel="icon" href="ultra_favicon.ico" type="image/x-icon" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-choropleth"></script>
 </head>
 
 <body class="forum-page">
@@ -65,6 +67,13 @@
             <h2 class="chart-title">📈 Ultra Completion Timeline</h2>
             <canvas id="ultraTimelineChart" width="100%" height="60"></canvas>
         </section>
+
+        <!-- 🌎 Visited Regions Map -->
+        <section id="visited-regions" style="margin: 40px 20px;">
+            <h2 class="chart-title">🌎 States Where You've Completed Ultras</h2>
+            <div id="state-map" style="height: 400px;"></div>
+            <p><strong>States Completed:</strong> <span id="visited-states-count">0</span></p>
+        </section>
     </main>
 
     <!-- Alan Chat Widget -->
@@ -89,7 +98,6 @@
         <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
     </footer>
 
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
     <script src="alanai_chatbot/alan.js"></script>
     <script src="forum/inject_account_dropdown.js"></script>
