--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -59,20 +59,19 @@
             <button onclick="askAlanBasedOnMap()" class="orange-btn">Ask Alan for Race Suggestions</button>
         </section>
 
-        <!-- 🗺️ Ultra Map Display -->
+        <!-- 🗺️ Ultra Map Display (now also shows visited states) -->
         <div id="ultra-map" style="height: 500px;"></div>
+
+        <!-- 🌎 Visited States Count -->
+        <section id="visited-regions" style="margin: 40px 20px;">
+            <h2 class="chart-title">🌎 States Where You've Completed Ultras</h2>
+            <p><strong>States Completed:</strong> <span id="visited-states-count">0</span></p>
+        </section>
 
         <!-- 🕰️ Ultra Completion Timeline -->
         <section id="ultra-timeline-section" style="margin: 40px 20px;">
             <h2 class="chart-title">📈 Ultra Completion Timeline</h2>
             <canvas id="ultraTimelineChart" width="100%" height="60"></canvas>
-        </section>
-
-        <!-- 🌎 Visited Regions Map -->
-        <section id="visited-regions" style="margin: 40px 20px;">
-            <h2 class="chart-title">🌎 States Where You've Completed Ultras</h2>
-            <div id="state-map" style="height: 400px;"></div>
-            <p><strong>States Completed:</strong> <span id="visited-states-count">0</span></p>
         </section>
     </main>
 
