--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -53,7 +53,6 @@
                 <p><strong>Longest Run:</strong> <span id="longest-run">0 mi</span></p>
                 <p><strong>Unique Locations:</strong> <span id="unique-locations">0</span></p>
             </div>
-
             <!-- 🔮 Alan AI Suggestion Button -->
             <button onclick="askAlanBasedOnMap()" class="orange-btn">Ask Alan for Race Suggestions</button>
         </section>
@@ -71,6 +70,12 @@
         <section id="ultra-timeline-section" style="margin: 40px 20px;">
             <h2 class="chart-title">📈 Ultra Completion Timeline</h2>
             <canvas id="ultraTimelineChart" width="100%" height="60"></canvas>
+        </section>
+
+        <!-- 🖼️ Strava Photo Timeline -->
+        <section id="strava-photo-timeline" style="margin: 40px 20px;">
+            <h2 class="chart-title">🖼️ My Ultra Photo Timeline</h2>
+            <div id="photo-scroll-container" class="photo-scroll"></div>
         </section>
     </main>
 
