--- a/frontend/index.html
+++ b/frontend/index.html
@@ -92,7 +92,8 @@
             <p>Track your weekly runs and visualize your ultramarathon journey.</p>
             <p><strong>Connect your Strava account to unlock your personal log.</strong></p>
             <div class="teaser-buttons">
-                <a href="login.html" class="orange-btn">Login</a>
+                <button id="login-button" class="orange-btn">Login</button>
+                <a href="training_log.html" class="orange-btn">Go to Your Personal Training Log</a>
                 <a href="register.html" class="gray-btn">Create Account</a>
             </div>
             <p class="note">🔒 Training Log is available only to logged-in users.</p>
@@ -195,8 +196,15 @@
     <script src="alanai_chatbot/alan.js"></script>
     <script>
         const token = localStorage.getItem("token");
-        if (!token) {
-            document.getElementById('trainingLogTeaser').style.display = 'block';
+        const loginButton = document.getElementById("login-button");
+        if (loginButton) {
+            loginButton.addEventListener("click", () => {
+                if (token) {
+                    alert("✅ You are already logged in!");
+                } else {
+                    window.location.href = 'login.html';
+                }
+            });
         }
     </script>
 </body>
