--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,8 +93,10 @@
             <p><strong>Connect your Strava account to unlock your personal log.</strong></p>
             <div class="teaser-buttons">
                 <button id="login-button" class="orange-btn">Login</button>
+                <a href="register.html" class="orange-btn">Create Account</a>
+            </div>
+            <div class="teaser-buttons">
                 <a href="training_log.html" class="orange-btn">Go to Your Personal Training Log</a>
-                <a href="register.html" class="gray-btn">Create Account</a>
             </div>
             <p class="note">🔒 Training Log is available only to logged-in users.</p>
         </section>
