--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,7 +95,7 @@
                 <a href="training_log.html" class="orange-btn">Go to Your Personal Training Log</a>
             </div>
             <div class="teaser-buttons">
-                <button id="login-button" class="orange-btn">Login</button>
+                <button id="login-button" class="orange-btn">Sign In</button>
                 <a href="register.html" class="orange-btn">Create Account</a>
             </div>
             <p class="note">🔒 Training Log is available only to logged-in users.</p>
