Increase profile picture size on account page only

--- a/frontend/account.html
+++ b/frontend/account.html
@@ -38,8 +38,7 @@
             <div class="account-card">
                 <div class="profile-container">
                     <img id="profile-pic" src="images/default-profile.png" alt="User Profile Picture"
-                        class="profile-pic"
-                        style="width: 150px; height: 150px; border-radius: 50%; border: 3px solid orange;">
+                        class="profile-pic">
                 </div>
                 <div class="info-section">
                     <h3 id="username">Welcome, User!</h3>
