--- a/frontend/account.html
+++ b/frontend/account.html
@@ -38,7 +38,7 @@
             <div class="account-card">
                 <div class="profile-container">
                     <img id="profile-pic" src="images/default-profile.png" alt="User Profile Picture"
-                        class="profile-pic">
+                        class="account-profile-pic">
                 </div>
                 <div class="info-section">
                     <h3 id="username">Welcome, User!</h3>
