--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,10 +18,10 @@
     <header class="sticky-header dual-row-header">
         <div class="header-top-row">
             <div class="mobile-header-container">
-                <div class="header-left">
+                <a href="index.html" class="header-left" style="text-decoration: none; color: inherit;">
                     <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                     <span class="site-title">UltramarathonConnect</span>
-                </div>
+                </a>
                 <button class="menu-toggle">☰</button>
             </div>
             <div id="account-tab" class="auth-tab mobile-account-tab"></div>
