--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
     <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
     <link rel="icon" href="ultra_favicon.ico" type="image/x-icon" />
+
+    <!-- 🔐 Load global login/session logic -->
+    <script src="auth_utils.js" defer></script>
 </head>
 
 <body class="forum-page">
